--- a/agent.html
+++ b/agent.html
@@ -229,12 +229,13 @@ several lines
 <li>Ideas for possible <strong>future extensions</strong> of the project.</li>
 </ul>
 <p>Please also comment all the important operations in the code. Please also try to use helpful variable names, e.g. <code>width</code> is more communicative than <code>var3</code>.</p>
-<p>Send your final project as one (or more) Lua script(s) to my email address, on or before <strong>Sunday 28th April</strong>. </p>
+<p>Send your final project as one (or more) Lua script(s) to the TA on or before <strong>Sunday 27th April</strong>. </p>
 <p>Your assignment will be evaluted by these criteria:</p>
 <ul>
-<li><strong>Technical completeness</strong> (33%). If it works, how well it works (efficiency, accuracy). Also how clearly the code is structured and commented. Even if it doesn&#39;t work, how well it was conceived and implemented. </li>
-<li><strong>Aesthetic qualities</strong> (33%). How interesting the appearances and behaviors are. Perhaps the system behaves differently for different initial conditions or variations in rules and parameters; spend some time finding good start conditions and include them as options in the program (e.g. triggered by pressing keys). Write down how to use them, and why you think they are interesting. If it doesn&#39;t work as expected or produce interesting results, then the evaluation here will be on how well you can articulate what you had hoped for, what aspects of that you think are missing, why you think they are missing, what you can suggest to resolve it, etc.</li>
-<li><strong>Novel contribution</strong> (33%). This means creating something that we haven&#39;t built together in class, perhaps even something that has never been made before. The key aspects here are the creative qualities of the idea. Your ideas for future extensions will be evaluated too.</li>
+<li><strong>Technical completeness</strong> (30%). If it works, how well it works (efficiency, accuracy). Also how clearly the code is structured and commented. Even if it doesn&#39;t work, how well it was conceived and implemented. </li>
+<li><strong>Aesthetic qualities</strong> (30%). How interesting the appearances and behaviors are. Perhaps the system behaves differently for different initial conditions or variations in rules and parameters; spend some time finding good start conditions and include them as options in the program (e.g. triggered by pressing keys). Write down how to use them, and why you think they are interesting. If it doesn&#39;t work as expected or produce interesting results, then the evaluation here will be on how well you can articulate what you had hoped for, what aspects of that you think are missing, why you think they are missing, what you can suggest to resolve it, etc.</li>
+<li><strong>Novel contribution</strong> (30%). This means creating something that we haven&#39;t built together in class, perhaps even something that has never been made before. The key aspects here are the creative qualities of the idea. Your ideas for future extensions will be evaluated too.</li>
+<li><strong>Effort</strong> (10%).</li>
 </ul>
 </div>
 	
