--- a/js.html
+++ b/js.html
@@ -47,6 +47,7 @@
 </li>
 <li>Agent systems<ul>
 <li><a href="js.boids.html">Boids</a></li>
+<li><a href="js.chemotaxis.html">Chemotaxis</a></li>
 </ul>
 </li>
 </ul>
