--- a/js.chemotaxis.html
+++ b/js.chemotaxis.html
@@ -2,7 +2,8 @@
 <html>
 <head>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-<script src="al.js"></script>
+<script src="http://grrrwaaa.github.io/gct753/al.min.js"></script>
+<!--<script src="al.js"></script>-->
 <style>
 body {
 	background: #eee;
@@ -14,7 +15,9 @@ body {
 </head>
 <body>
 <script>
+
 al.init();
+
 
 /// put your code here /////////////////////////////////////////////////////////
 
@@ -147,5 +150,6 @@ function draw() {
 
 al.start();
 </script>
+<a href="js.html">Documentation</a>
 </body>
 </html>
