updated js examples

--- a/js.html
+++ b/js.html
@@ -50,6 +50,11 @@
 <li><a href="js.chemotaxis.html">Chemotaxis</a></li>
 </ul>
 </li>
+<li>Evolutionary systems<ul>
+<li><a href="js.evo_images.html">Evolving images</a></li>
+<li><a href="js.evo_agents.html">Evolving agents</a></li>
+</ul>
+</li>
 </ul>
 <h1>Using JavaScript and al.js</h1>
 <p>Since 2014 we are also offering class material using a browser-based JavaScript implementation. Most of the library code is in <a href="http://grrrwaaa.github.io/gct753/al.min.js"><a href="http://grrrwaaa.github.io/gct753/al.min.js">http://grrrwaaa.github.io/gct753/al.min.js</a></a> (or, for an uncompressed version, see <a href="http://grrrwaaa.github.io/gct753/al.js"><a href="http://grrrwaaa.github.io/gct753/al.js">http://grrrwaaa.github.io/gct753/al.js</a></a>). This library replicates many of the capabilities of last year&#39;s Lua based system, and adds a few new ones. Graphical rendering uses HTML5 Canvas API and sound is built on the ScriptProcessingNode API, so a recent version of Chrome, FireFox or Safari is recommended (IE probably won&#39;t work). </p>
